disable state log per default